tests/ui/delegation/generics/const-type-ice-153433.stderr
error[E0405]: cannot find trait `Foo` in this scope
  --> $DIR/const-type-ice-153433.rs:5:33
   |
LL |     fn foo<const N: dyn for<'a> Foo>() {}
   |                                 ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
